--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                 >
               </div>
               <div id="flags" class="flags">
-                <div class="flags_item" data_language="mx">
+                <div class="flags_item flags_img" href="index.html">
                   <img src="images/idioma/mx.svg" alt="" href="index.html"
                   target="_blank"/>
                 </div>
-                <div class="flags_item" data_language="us">
+                <div class="flags_item flags_img" href="index.html">
                   <img src="images/idioma/us.svg" alt="" href="us.html"
                   target="_blank"/>
                 </div>
-                <div class="flags_item" data_language="fr">
+                <div class="flags_item flags_img" data_language="fr">
                   <img src="images/idioma/fr.svg" alt="" />
                 </div>
               </div>
